libs/internal-dns-xp/tests/integration/kuttl/05-dns-query.yaml
# Test DNS resolution using a debug pod
apiVersion: v1
kind: Pod
metadata:
  name: dns-test-query
  namespace: default
spec:
  containers:
    - name: dns-client
      image: busybox:1.36
      command:
        - sleep
        - "3600"
  dnsPolicy: None
  dnsConfig:
    nameservers:
      - internal-dns-service.default.svc.cluster.local
    searches:
      - default.svc.cluster.local
      - svc.cluster.local
      - cluster.local
  restartPolicy: Never
